@@ -4,7 +4,7 @@
 
 pkgname=links-g
 pkgver=2.2
-pkgrel=2
+pkgrel=3
 pkgdesc="A text WWW browser, similar to Lynx, with framebuffer and X graphics enabled"
 arch=('i686' 'x86_64')
 url="http://links.twibright.com/"
@@ -12,6 +12,8 @@ license=('GPL')
 conflicts=('links')
 provides=('links')
 depends=('gpm' 'libtiff' 'openssl' 'libpng' 'pcre' 'libx11' 'bzip2')
+makedepends=('xorg-server')
+optdepends=('xorg-server: for running Links in graphics mode')
 source=(http://links.twibright.com/download/links-$pkgver.tar.bz2)
 md5sums=('bf5b20529a2a811701c5af52b28ebdd4')
 
@@ -23,4 +25,3 @@ build() {
   make || return 1
   make DESTDIR=$startdir/pkg install
 }
-
