@@ -1,3 +1,8 @@
+2009-08-01  Evangelos Foutras <foutrelis@gmail.com>
+
+	* links-g-2.2-3
+	* added xorg-server as makedepends and optdepends
+
 2008-08-03  Mateusz Herych <heniekk@gmail.com>
 
 	* links-g-2.2
@@ -14,7 +19,7 @@
 	* version bump
 
 2008-05-06  Mateusz Herych <heniekk@gmail.com>
-	
+
 	* links-g-2.1pre35-1
 	* version bump
 
